PENV-478: add root
