# v1/openapi/schemas/child_tree_request.yaml
@@ -4,6 +4,10 @@ allOf:
   - $ref: 'record-abstract.yaml'
   - type: object
     properties:
+      root:
+        type: boolean
+        description: the root of the request tree.
+        example: true
       state_reference:
         type: string
         description: state reference which was created by this request.
